--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -25,6 +25,43 @@
   -webkit-font-smoothing: antialiased;
 }
 
+ol,
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  margin: 0; /* 2 */
+  padding: 0;
+  line-height: inherit;
+  color: inherit;
+  box-sizing: border-box;
+}
+
+blockquote,
+dl,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+figure,
+p,
+pre {
+  margin: 0;
+}
+
 input,
 button,
 submit {
